--- a/src/main/resources/templates/order_channel_table.html
+++ b/src/main/resources/templates/order_channel_table.html
@@ -16,11 +16,12 @@
   <tr>
     <th>Order ID</th>
     <th>Product</th>
-    <th>Order Status</th>
     <th>Warehouse</th>
     <th>Distribution Facility</th>
     <th>Start Shipper</th>
     <th>End Shipper</th>
+    <th>Delivery Address</th>
+    <th>Order Status</th>
   </tr>
   </thead>
   <tbody>
@@ -41,6 +42,7 @@
         End Shipper
       </a>
     </td>
+    <td th:text="${order.address}">Facility</td>
     <td th:text="${order.isOpen} ? 'Pending' : 'Delivered'"
         th:classappend="${order.isOpen} ? 'status-pending' : 'status-delivered'">
     </td>
@@ -52,23 +54,4 @@
 
 </body>
 
-<script>
-
-  document.addEventListener('DOMContentLoaded', () => {
-    const toggleButton = document.querySelector('.dropdown-toggle');
-    const dropdown = document.getElementById('componentsDropdown');
-
-    toggleButton.addEventListener('click', () => {
-      const isVisible = dropdown.style.display === 'block';
-      dropdown.style.display = isVisible ? 'none' : 'block';
-    });
-
-    window.addEventListener('click', (event) => {
-      if (!toggleButton.contains(event.target) && !dropdown.contains(event.target)) {
-        dropdown.style.display = 'none';
-      }
-    });
-  });
-
-</script>
 </html>
