--- a/src/main/resources/templates/components/memory.html
+++ b/src/main/resources/templates/components/memory.html
@@ -4,57 +4,74 @@
     <meta charset="UTF-8">
     <title>Memory</title>
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
 </head>
 <body>
 <div th:replace="~{fragments/navbar :: navbar}"></div>
-<form th:action="@{/components/memory}" method="get">
-  <p>
-    <label for="sortBy">Sort By</label>
-    <select th:value="${sortBy}" name="sortBy" id="sortBy" size="1">
-      <option>Name</option>
-      <option>Price</option>
-      <option>Speed</option>
-    </select>
-    <select th:value="${order}" name="order" id="order" size="1">
-      <option>Ascending</option>
-      <option>Descending</option>
-    </select>
-  </p>
-  <p>
-    <label for="filterBy">Filter</label>
-    <select th:value="${filterBy}" name="filterBy" id="filterBy" size="1" onchange="checkFilterBy(this);">
-      <option>(No filter)</option>
-      <option>Price</option>
-      <option value="Memory speed">Speed</option>
-    </select>
-    <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1">
-      <option>at least</option>
-      <option>at most</option>
-    </select>
+<main class="container mt-5">
+<form th:action="@{/components/memory}" method="get" class="mb-4">
+  <div class="grid grid-2">
+    <div>
+      <label for="sortBy">Sort By</label>
+      <select th:value="${sortBy}" name="sortBy" id="sortBy" size="1">
+        <option>Name</option>
+        <option>Price</option>
+        <option>Speed</option>
+      </select>
+    </div>
+    <div>
+      <label for="order">Order</label>
+      <select th:value="${order}" name="order" id="order" size="1">
+        <option>Ascending</option>
+        <option>Descending</option>
+      </select>
+    </div>
+  </div>
+  <div class="grid grid-2 mt-3">
+    <div>
+      <label for="filterBy">Filter</label>
+      <select th:value="${filterBy}" name="filterBy" id="filterBy" size="1" onchange="checkFilterBy(this);">
+        <option>(No filter)</option>
+        <option>Price</option>
+        <option value="Memory speed">Speed</option>
+      </select>
+    </div>
+    <div>
+      <label for="filterOp">Filter Operation</label>
+      <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1">
+        <option>at least</option>
+        <option>at most</option>
+      </select>
+    </div>
+  </div>
+  <div class="mt-3">
     <label id="priceFilterLabel" class="filterLabel" for="numberFilter">£</label>
     <input type="number" th:value="${numberFilter}" name="numberFilter" id="numberFilter" step="any">
     <label id="memorySpeedFilterLabel" class="filterLabel" for="numberFilter">MHz</label>
-  </p>
-  <p>
-    <button type="submit">Go</button>
-  </p>
+  </div>
+  <div class="mt-3">
+    <button type="submit" class="btn btn-primary">Go</button>
+  </div>
 </form>
 <ul>
   <li th:each="mem : ${memory}" th:if="${mem.price > 0.0}">
-    <p th:text="'Name: ' + ${mem.name}"></p>
-    <p th:text="'Price: £' + ${#numbers.formatDecimal(mem.price, 0, 'COMMA', 2, 'POINT')}"></p>
-    <p th:text="'Speed: DDR' + ${mem.speed.getFirst().speed} + ' ' + ${mem.speed.getLast().speed} + 'MHz'"></p>
-    <p th:text="'Modules: ' + ${mem.modules.getFirst().module} + ' x ' + ${mem.modules.getLast().module} + 'GB'"></p>
-    <p>Price per GB: <span th:text="${mem.price_per_gb > 0.0} ? '£' + ${mem.price_per_gb} : 'Unavailable'"></span></p>
-    <p>Colour: <span th:text="${mem.color != null} ? ${mem.color} : 'N/A'"></span></p>
-    <p th:text="'First Word Latency: ' + ${mem.first_word_latency} + 'ns'"></p>
-    <p th:text="'CAS Latency: ' + ${mem.cas_latency} + ' cycles'"></p>
-    <form th:action="@{/components/add-to-product}" method="post" th:object="${componentIds}" th:if="${componentIds != null}">
-      <input type="hidden" th:value="${mem.id}" name="memoryId">
-      <button>Select</button>
-    </form>
+    <div class="product-card">
+      <p th:text="'Name: ' + ${mem.name}"></p>
+      <p th:text="'Price: £' + ${#numbers.formatDecimal(mem.price, 0, 'COMMA', 2, 'POINT')}"></p>
+      <p th:text="'Speed: DDR' + ${mem.speed.getFirst().speed} + ' ' + ${mem.speed.getLast().speed} + 'MHz'"></p>
+      <p th:text="'Modules: ' + ${mem.modules.getFirst().module} + ' x ' + ${mem.modules.getLast().module} + 'GB'"></p>
+      <p>Price per GB: <span th:text="${mem.price_per_gb > 0.0} ? '£' + ${mem.price_per_gb} : 'Unavailable'"></span></p>
+      <p>Colour: <span th:text="${mem.color != null} ? ${mem.color} : 'N/A'"></span></p>
+      <p th:text="'First Word Latency: ' + ${mem.first_word_latency} + 'ns'"></p>
+      <p th:text="'CAS Latency: ' + ${mem.cas_latency} + ' cycles'"></p>
+      <form th:action="@{/components/add-to-product}" method="post" th:object="${componentIds}" th:if="${componentIds != null}">
+        <input type="hidden" th:value="${mem.id}" name="memoryId">
+        <button class="btn btn-outline">Select</button>
+      </form>
+    </div>
   </li>
 </ul>
+</main>
 </body>
 <script th:src="@{/js/filterDisplay.js}"></script>
 </html>
