--- a/src/main/resources/templates/components/cases.html
+++ b/src/main/resources/templates/components/cases.html
@@ -4,58 +4,75 @@
     <meta charset="UTF-8">
     <title>Cases</title>
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
 </head>
 <body>
 <div th:replace="~{fragments/navbar :: navbar}"></div>
-<form th:action="@{/components/cases}" method="get">
-  <p>
-    <label for="sortBy">Sort By</label>
-    <select th:value="${sortBy}" name="sortBy" id="sortBy" size="1">
-      <option>Name</option>
-      <option>Price</option>
-      <option>Volume</option>
-    </select>
-    <select th:value="${order}" name="order" id="order" size="1">
-      <option>Ascending</option>
-      <option>Descending</option>
-    </select>
-  </p>
-  <p>
-    <label for="filterBy">Filter</label>
-    <select th:value="${filterBy}" name="filterBy" id="filterBy" size="1" onchange="checkFilterBy(this);">
-      <option>(No filter)</option>
-      <option>Price</option>
-      <option>Volume</option>
-    </select>
-    <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1">
-      <option>at least</option>
-      <option>at most</option>
-    </select>
+<main class="container mt-5">
+<form th:action="@{/components/cases}" method="get" class="mb-4">
+  <div class="grid grid-2">
+    <div>
+      <label for="sortBy">Sort By</label>
+      <select th:value="${sortBy}" name="sortBy" id="sortBy" size="1">
+        <option>Name</option>
+        <option>Price</option>
+        <option>Volume</option>
+      </select>
+    </div>
+    <div>
+      <label for="order">Order</label>
+      <select th:value="${order}" name="order" id="order" size="1">
+        <option>Ascending</option>
+        <option>Descending</option>
+      </select>
+    </div>
+  </div>
+  <div class="grid grid-2 mt-3">
+    <div>
+      <label for="filterBy">Filter</label>
+      <select th:value="${filterBy}" name="filterBy" id="filterBy" size="1" onchange="checkFilterBy(this);">
+        <option>(No filter)</option>
+        <option>Price</option>
+        <option>Volume</option>
+      </select>
+    </div>
+    <div>
+      <label for="filterOp">Filter Operation</label>
+      <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1">
+        <option>at least</option>
+        <option>at most</option>
+      </select>
+    </div>
+  </div>
+  <div class="mt-3">
     <label id="priceFilterLabel" class="filterLabel" for="numberFilter">£</label>
     <input type="number" th:value="${numberFilter}" name="numberFilter" id="numberFilter" step="any">
     <label id="caseSizeFilterLabel" class="filterLabel" for="numberFilter">L</label>
-  </p>
-  <p>
-    <button type="submit">Go</button>
-  </p>
+  </div>
+  <div class="mt-3">
+    <button type="submit" class="btn btn-primary">Go</button>
+  </div>
 </form>
 <ul>
   <li th:each="case : ${cases}" th:if="${case.price > 0.0}">
-    <p th:text="'Name: ' + ${case.name}"></p>
-    <p th:text="'Price: £' + ${#numbers.formatDecimal(case.price, 0, 'COMMA', 2, 'POINT')}"></p>
-    <p th:text="'Type: ' + ${case.type}"></p>
-    <p th:text="'Colour: ' + ${case.color}"></p>
-    <p th:text="'Side Panel: ' + ${case.side_panel}"></p>
-    <p>External Volume:
-      <span th:text="${case.externalVolume > 0.0} ? ${case.externalVolume} + 'L' : 'Unavailable'"></span>
-    </p>
-    <p th:text="'Internal 3.5-inch Bays: ' + ${case.internal_35_bays}"></p>
-    <form th:action="@{/components/add-to-product}" method="post" th:object="${componentIds}" th:if="${componentIds != null}">
-      <input type="hidden" th:value="${case.id}" name="caseId">
-      <button>Select</button>
-    </form>
+    <div class="product-card">
+      <p th:text="'Name: ' + ${case.name}"></p>
+      <p th:text="'Price: £' + ${#numbers.formatDecimal(case.price, 0, 'COMMA', 2, 'POINT')}"></p>
+      <p th:text="'Type: ' + ${case.type}"></p>
+      <p th:text="'Colour: ' + ${case.color}"></p>
+      <p th:text="'Side Panel: ' + ${case.side_panel}"></p>
+      <p>External Volume:
+        <span th:text="${case.externalVolume > 0.0} ? ${case.externalVolume} + 'L' : 'Unavailable'"></span>
+      </p>
+      <p th:text="'Internal 3.5-inch Bays: ' + ${case.internal_35_bays}"></p>
+      <form th:action="@{/components/add-to-product}" method="post" th:object="${componentIds}" th:if="${componentIds != null}">
+        <input type="hidden" th:value="${case.id}" name="caseId">
+        <button class="btn btn-outline">Select</button>
+      </form>
+    </div>
   </li>
 </ul>
+</main>
 </body>
 <script th:src="@{/js/filterDisplay.js}"></script>
 </html>
