--- a/src/main/resources/templates/components/internal-storage.html
+++ b/src/main/resources/templates/components/internal-storage.html
@@ -4,58 +4,73 @@
     <meta charset="UTF-8">
     <title>Internal Storage Devices</title>
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
 </head>
 <body>
 <div th:replace="~{fragments/navbar :: navbar}"></div>
-<form th:action="@{/components/internal-storage}" method="get">
-  <p>
-    <label for="sortBy">Sort By</label>
-    <select th:value="${sortBy}" name="sortBy" id="sortBy" size="1">
-      <option>Name</option>
-      <option>Price</option>
-      <option>Capacity</option>
-    </select>
-    <select th:value="${order}" name="order" id="order" size="1">
-      <option>Ascending</option>
-      <option>Descending</option>
-    </select>
-  </p>
-  <p>
-    <label for="filterBy">Filter</label>
-    <select th:value="${filterBy}" name="filterBy" id="filterBy" size="1" onchange="checkFilterBy(this);">
-      <option>(No filter)</option>
-      <option>Price</option>
-      <option>Capacity</option>
-    </select>
-    <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1">
-      <option>at least</option>
-      <option>at most</option>
-    </select>
+<main class="container mt-5">
+<form th:action="@{/components/internal-storage}" method="get" class="mb-4">
+  <div class="grid grid-2">
+    <div>
+      <label for="sortBy">Sort By</label>
+      <select th:value="${sortBy}" name="sortBy" id="sortBy" size="1">
+        <option>Name</option>
+        <option>Price</option>
+        <option>Capacity</option>
+      </select>
+    </div>
+    <div>
+      <label for="order">Order</label>
+      <select th:value="${order}" name="order" id="order" size="1">
+        <option>Ascending</option>
+        <option>Descending</option>
+      </select>
+    </div>
+  </div>
+  <div class="grid grid-2 mt-3">
+    <div>
+      <label for="filterBy">Filter</label>
+      <select th:value="${filterBy}" name="filterBy" id="filterBy" size="1" onchange="checkFilterBy(this);">
+        <option>(No filter)</option>
+        <option>Price</option>
+        <option>Capacity</option>
+      </select>
+    </div>
+    <div>
+      <label for="filterOp">Filter Operation</label>
+      <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1">
+        <option>at least</option>
+        <option>at most</option>
+      </select>
+    </div>
+  </div>
+  <div class="mt-3">
     <label id="priceFilterLabel" class="filterLabel" for="numberFilter">£</label>
     <input type="number" th:value="${numberFilter}" name="numberFilter" id="numberFilter" step="any">
     <label id="storageCapacityFilterLabel" class="filterLabel" for="numberFilter">GB</label>
-  </p>
-  <p>
-    <button type="submit">Go</button>
-  </p>
+  </div>
+  <div class="mt-3">
+    <button type="submit" class="btn btn-primary">Go</button>
+  </div>
 </form>
 <ul>
   <li th:each="storage : ${internal_storage}" th:if="${storage.price > 0.0}">
-    <p th:text="'Name: ' + ${storage.name}"></p>
-    <p th:text="'Price: £' + ${#numbers.formatDecimal(storage.price, 0, 'COMMA', 2, 'POINT')}"></p>
-
-    <p>Capacity: <span th:text=" ${storage.capacity/1000 < 1} ? ${storage.capacity} + 'GB' : ${storage.capacity/1000} + 'TB'"></span></p>
-
-    <p>Price per GB: <span th:text="${storage.price_per_gb > 0.0} ? '£' + ${storage.price_per_gb} : 'Unavailable'"></span></p>
-    <p th:text="'Type: ' + ${storage.type}"></p>
-    <p>Cache: <span th:text="${storage.cache > 0} ? ${storage.cache} + 'MB' : 'Unavailable'"></span></p>
-    <p th:text="'Form Factor: ' + ${storage.form_factor}"></p>
-    <form th:action="@{/components/add-to-product}" method="post" th:object="${componentIds}" th:if="${componentIds != null}">
-      <input type="hidden" th:value="${storage.id}" name="internalStorageId">
-      <button>Select</button>
-    </form>
+    <div class="product-card">
+      <p th:text="'Name: ' + ${storage.name}"></p>
+      <p th:text="'Price: £' + ${#numbers.formatDecimal(storage.price, 0, 'COMMA', 2, 'POINT')}"></p>
+      <p>Capacity: <span th:text=" ${storage.capacity/1000 < 1} ? ${storage.capacity} + 'GB' : ${storage.capacity/1000} + 'TB'"></span></p>
+      <p>Price per GB: <span th:text="${storage.price_per_gb > 0.0} ? '£' + ${storage.price_per_gb} : 'Unavailable'"></span></p>
+      <p th:text="'Type: ' + ${storage.type}"></p>
+      <p>Cache: <span th:text="${storage.cache > 0} ? ${storage.cache} + 'MB' : 'Unavailable'"></span></p>
+      <p th:text="'Form Factor: ' + ${storage.form_factor}"></p>
+      <form th:action="@{/components/add-to-product}" method="post" th:object="${componentIds}" th:if="${componentIds != null}">
+        <input type="hidden" th:value="${storage.id}" name="internalStorageId">
+        <button class="btn btn-outline">Select</button>
+      </form>
+    </div>
   </li>
 </ul>
+</main>
 </body>
 <script th:src="@{/js/filterDisplay.js}"></script>
 </html>
