--- a/src/main/resources/templates/components/motherboards.html
+++ b/src/main/resources/templates/components/motherboards.html
@@ -4,53 +4,70 @@
     <meta charset="UTF-8">
     <title>Motherboards</title>
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
 </head>
 <body>
 <div th:replace="~{fragments/navbar :: navbar}"></div>
-<form th:action="@{/components/motherboards}" method="get">
-  <p>
-    <label for="sortBy">Sort By</label>
-    <select th:value="${sortBy}" name="sortBy" id="sortBy" size="1">
-      <option>Name</option>
-      <option>Price</option>
-    </select>
-    <select th:value="${order}" name="order" id="order" size="1">
-      <option>Ascending</option>
-      <option>Descending</option>
-    </select>
-  </p>
-  <p>
-    <label for="filterBy">Filter</label>
-    <select th:value="${filterBy}" name="filterBy" id="filterBy" size="1" onchange="checkFilterBy(this);">
-      <option>(No filter)</option>
-      <option>Price</option>
-    </select>
-    <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1">
-      <option>at least</option>
-      <option>at most</option>
-    </select>
+<main class="container mt-5">
+<form th:action="@{/components/motherboards}" method="get" class="mb-4">
+  <div class="grid grid-2">
+    <div>
+      <label for="sortBy">Sort By</label>
+      <select th:value="${sortBy}" name="sortBy" id="sortBy" size="1">
+        <option>Name</option>
+        <option>Price</option>
+      </select>
+    </div>
+    <div>
+      <label for="order">Order</label>
+      <select th:value="${order}" name="order" id="order" size="1">
+        <option>Ascending</option>
+        <option>Descending</option>
+      </select>
+    </div>
+  </div>
+  <div class="grid grid-2 mt-3">
+    <div>
+      <label for="filterBy">Filter</label>
+      <select th:value="${filterBy}" name="filterBy" id="filterBy" size="1" onchange="checkFilterBy(this);">
+        <option>(No filter)</option>
+        <option>Price</option>
+      </select>
+    </div>
+    <div>
+      <label for="filterOp">Filter Operation</label>
+      <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1">
+        <option>at least</option>
+        <option>at most</option>
+      </select>
+    </div>
+  </div>
+  <div class="mt-3">
     <label id="priceFilterLabel" class="filterLabel" for="numberFilter">£</label>
     <input type="number" th:value="${numberFilter}" name="numberFilter" id="numberFilter" step="any">
-  </p>
-  <p>
-    <button type="submit">Go</button>
-  </p>
+  </div>
+  <div class="mt-3">
+    <button type="submit" class="btn btn-primary">Go</button>
+  </div>
 </form>
 <ul>
   <li th:each="motherboard : ${motherboards}" th:if="${motherboard.price > 0.0}">
-    <p th:text="'Name: ' + ${motherboard.name}"></p>
-    <p th:text="'Price: £' + ${#numbers.formatDecimal(motherboard.price, 0, 'COMMA', 2, 'POINT')}"></p>
-    <p th:text="'Socket: ' + ${motherboard.socket}"></p>
-    <p th:text="'Form Factor: ' + ${motherboard.form_factor}"></p>
-    <p th:text="'Max Memory: ' + ${motherboard.max_memory} + 'GB'"></p>
-    <p th:text="'Memory Slots: ' + ${motherboard.memory_slots}"></p>
-    <p>Colour: <span th:text="${motherboard.color != null} ? ${motherboard.color} : 'N/A'"></span></p>
-    <form th:action="@{/components/add-to-product}" method="post" th:object="${componentIds}" th:if="${componentIds != null}">
-      <input type="hidden" th:value="${motherboard.id}" name="motherboardId">
-      <button>Select</button>
-    </form>
+    <div class="product-card">
+      <p th:text="'Name: ' + ${motherboard.name}"></p>
+      <p th:text="'Price: £' + ${#numbers.formatDecimal(motherboard.price, 0, 'COMMA', 2, 'POINT')}"></p>
+      <p th:text="'Socket: ' + ${motherboard.socket}"></p>
+      <p th:text="'Form Factor: ' + ${motherboard.form_factor}"></p>
+      <p th:text="'Max Memory: ' + ${motherboard.max_memory} + 'GB'"></p>
+      <p th:text="'Memory Slots: ' + ${motherboard.memory_slots}"></p>
+      <p>Colour: <span th:text="${motherboard.color != null} ? ${motherboard.color} : 'N/A'"></span></p>
+      <form th:action="@{/components/add-to-product}" method="post" th:object="${componentIds}" th:if="${componentIds != null}">
+        <input type="hidden" th:value="${motherboard.id}" name="motherboardId">
+        <button class="btn btn-outline">Select</button>
+      </form>
+    </div>
   </li>
 </ul>
+</main>
 </body>
 <script th:src="@{/js/filterDisplay.js}"></script>
 </html>
