--- a/src/main/resources/templates/components/power-supplies.html
+++ b/src/main/resources/templates/components/power-supplies.html
@@ -4,56 +4,73 @@
     <meta charset="UTF-8">
     <title>Power Supplies</title>
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
 </head>
 <body>
 <div th:replace="~{fragments/navbar :: navbar}"></div>
-<form th:action="@{/components/power-supplies}" method="get">
-  <p>
-    <label for="sortBy">Sort By</label>
-    <select th:value="${sortBy}" name="sortBy" id="sortBy" size="1">
-      <option>Name</option>
-      <option>Price</option>
-      <option>Wattage</option>
-    </select>
-    <select th:value="${order}" name="order" id="order" size="1">
-      <option>Ascending</option>
-      <option>Descending</option>
-    </select>
-  </p>
-  <p>
-    <label for="filterBy">Filter</label>
-    <select th:value="${filterBy}" name="filterBy" id="filterBy" size="1" onchange="checkFilterBy(this);">
-      <option>(No filter)</option>
-      <option>Price</option>
-      <option>Wattage</option>
-    </select>
-    <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1">
-      <option>at least</option>
-      <option>at most</option>
-    </select>
+<main class="container mt-5">
+<form th:action="@{/components/power-supplies}" method="get" class="mb-4">
+  <div class="grid grid-2">
+    <div>
+      <label for="sortBy">Sort By</label>
+      <select th:value="${sortBy}" name="sortBy" id="sortBy" size="1">
+        <option>Name</option>
+        <option>Price</option>
+        <option>Wattage</option>
+      </select>
+    </div>
+    <div>
+      <label for="order">Order</label>
+      <select th:value="${order}" name="order" id="order" size="1">
+        <option>Ascending</option>
+        <option>Descending</option>
+      </select>
+    </div>
+  </div>
+  <div class="grid grid-2 mt-3">
+    <div>
+      <label for="filterBy">Filter</label>
+      <select th:value="${filterBy}" name="filterBy" id="filterBy" size="1" onchange="checkFilterBy(this);">
+        <option>(No filter)</option>
+        <option>Price</option>
+        <option>Wattage</option>
+      </select>
+    </div>
+    <div>
+      <label for="filterOp">Filter Operation</label>
+      <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1">
+        <option>at least</option>
+        <option>at most</option>
+      </select>
+    </div>
+  </div>
+  <div class="mt-3">
     <label id="priceFilterLabel" class="filterLabel" for="numberFilter">£</label>
     <input type="number" th:value="${numberFilter}" name="numberFilter" id="numberFilter" step="any">
     <label id="psuWattageFilterLabel" class="filterLabel" for="numberFilter">W</label>
-  </p>
-  <p>
-    <button type="submit">Go</button>
-  </p>
+  </div>
+  <div class="mt-3">
+    <button type="submit" class="btn btn-primary">Go</button>
+  </div>
 </form>
 <ul>
   <li th:each="power_supply : ${power_supplies}" th:if="${power_supply.price > 0.0}">
-    <p th:text="'Name: ' + ${power_supply.name}"></p>
-    <p th:text="'Price: £' + ${#numbers.formatDecimal(power_supply.price, 0, 'COMMA', 2, 'POINT')}"></p>
-    <p th:text="'Type: ' + ${power_supply.type}"></p>
-    <p>Efficiency: <span th:text="${power_supply.efficiency != null} ? '80+ ' + ${#strings.capitalize(power_supply.efficiency)} : 'Unavailable'"></span></p>
-    <p th:text="'Wattage: ' + ${power_supply.wattage} + 'W'"></p>
-    <p th:text="'Modular: ' + ${power_supply.modular}"></p>
-    <p>Colour: <span th:text="${power_supply.color != null} ? ${power_supply.color} : 'N/A'"></span></p>
-    <form th:action="@{/components/add-to-product}" method="post" th:object="${componentIds}" th:if="${componentIds != null}">
-      <input type="hidden" th:value="${power_supply.id}" name="powerSupplyId">
-      <button>Select</button>
-    </form>
+    <div class="product-card">
+      <p th:text="'Name: ' + ${power_supply.name}"></p>
+      <p th:text="'Price: £' + ${#numbers.formatDecimal(power_supply.price, 0, 'COMMA', 2, 'POINT')}"></p>
+      <p th:text="'Type: ' + ${power_supply.type}"></p>
+      <p>Efficiency: <span th:text="${power_supply.efficiency != null} ? '80+ ' + ${#strings.capitalize(power_supply.efficiency)} : 'Unavailable'"></span></p>
+      <p th:text="'Wattage: ' + ${power_supply.wattage} + 'W'"></p>
+      <p th:text="'Modular: ' + ${power_supply.modular}"></p>
+      <p>Colour: <span th:text="${power_supply.color != null} ? ${power_supply.color} : 'N/A'"></span></p>
+      <form th:action="@{/components/add-to-product}" method="post" th:object="${componentIds}" th:if="${componentIds != null}">
+        <input type="hidden" th:value="${power_supply.id}" name="powerSupplyId">
+        <button class="btn btn-outline">Select</button>
+      </form>
+    </div>
   </li>
 </ul>
+</main>
 </body>
 <script th:src="@{/js/filterDisplay.js}"></script>
 </html>
