--- a/src/main/resources/templates/manage_order_table.html
+++ b/src/main/resources/templates/manage_order_table.html
@@ -2,40 +2,41 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Orders</title>
-  <link rel="stylesheet" href="/css/order_table.css">
+  <link rel="stylesheet" th:href="@{/css/order_table.css}">
   <link rel="stylesheet" th:href="@{/css/navbar.css}">
-
+  <link rel="stylesheet" th:href="@{/css/main.css}">
 </head>
 <body>
 <div th:replace="~{fragments/navbar :: navbar}"></div>
+<main>
+    <h1>Orders</h1>
 
-<h1>Orders</h1>
+    <table>
+      <thead>
+      <tr>
+        <th>Order ID</th>
+        <th>Product</th>
+        <th>Quantity</th>
+        <th>Status</th>
+        <th>Expected Delivery</th>
+        <th>Order Time</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="order : ${orders}">
+        <td th:text="${order.id}"></td>
+        <td th:text="${order.product.name}"></td>
+        <td th:text="${order.orderTime}"></td>
+        <td th:text="${order.expectedDeliveryTime}"></td>
+        <td th:text="${order.quantity}"></td>
+        <td th:text="${order.isOpen} ? 'Pending' : 'Delivered'"
+            th:classappend="${order.isOpen} ? 'status-pending' : 'status-delivered'">
+        </td>
 
-<table>
-  <thead>
-  <tr>
-    <th>Order ID</th>
-    <th>Product</th>
-    <th>Quantity</th>
-    <th>Status</th>
-    <th>Expected Delivery</th>
-    <th>Order Time</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:each="order : ${orders}">
-    <td th:text="${order.id}"></td>
-    <td th:text="${order.product.name}"></td>
-    <td th:text="${order.orderTime}"></td>
-    <td th:text="${order.expectedDeliveryTime}"></td>
-    <td th:text="${order.quantity}"></td>
-    <td th:text="${order.isOpen} ? 'Pending' : 'Delivered'"
-        th:classappend="${order.isOpen} ? 'status-pending' : 'status-delivered'">
-    </td>
-
-  </tr>
-  </tbody>
-</table>
+      </tr>
+      </tbody>
+    </table>
+</main>
 
 </body>
 <script>
